Fixed QR code url and hid it on mobile.

--- a/app/public/style.css
+++ b/app/public/style.css
@@ -30,6 +30,10 @@ body {
 	.toggleBoard::before {
 		content: "Show ";
 	}
+
+	.gameInfo { 
+		display: none;
+	}
 }
 
 .toggleBoard.off::before {
